# zonalstats_earth_engine

./: .gitignore  README.md  pyproject.toml  requirements.yml
src/: aggregate_ee.py  gee_utils.py  general_utils.py
src/projections/: constants.py  elevation.py  geometry.py  models.py  modis.py  raster.py  shapefiles.py  temperature.py  utils.py
src/projections/Notebooks/: ACLED.ipynb  AgroAllFAO.ipynb  AgroPotentialYield.ipynb  CountryInfo.ipynb  Elevation-Ruggedness.ipynb  Elevation.ipynb  FBLocations.ipynb  GDELT.ipynb  GDELT_Ethnic.ipynb  GHS.ipynb  GPCP.ipynb  Latinobarometro.ipynb  Leaders.ipynb  MODIS.ipynb  Monash.ipynb  Monash_vs_NL.ipynb  NL_NOAA.ipynb  NL_Subnat.ipynb  Population.ipynb  Precipitaciones_GPCC.ipynb  Precipitaciones_GPCC_raster.ipynb  Precipitaciones_cru.ipynb  Precipitaciones_cru_raster.ipynb  Precipitaciones_scpdsi.ipynb  Precipitaciones_scpdsi_raster.ipynb  PreprocessingEthnicLocs.ipynb  PreprocessingLocs.ipynb  SCAD.ipynb  Temperature.ipynb  VeCrosswalk.ipynb  top50_keywords_acled.yml  top50_keywords_scad.yml
tests/: test_elevation.py  test_raster.py
